--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -270,3 +270,36 @@
   //Элемент кнопка в левой части под очередным блоком
   &__button-left
     margin-top 10px;
+
+  //Элемент стрелки
+  &__arrow
+    position absolute
+    border 12px solid transparent
+
+    &--down
+      left 130px
+      bottom -24px
+      border-top 12px solid #ffffff
+
+    &--up
+      left 130px
+      top -24px
+      border-bottom 12px solid #ffffff
+
+  //Элемент номер
+  &__number
+    width 71px
+    padding-top 20px
+    padding-bottom 18px
+
+    &--theme-yellow-bg
+      background-color #ffe400
+
+    &--text
+      font-size 27px
+      font-weight 700
+      font-family Montserrat, sans-serif;
+      color #363636
+
+    &--centered-text
+      text-align center
