--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -1,83 +1,101 @@
-div.main.main_theme-white-gr
+div.main.main--theme-white-gr
     // Контент для тела сайта
-    div.main__content.main__content-inner.main__content_theme-grey
+    div.main__content.main__content--theme-grey.main__content-inner
         //Колонка для всего остального
         aside.main__column-aside.main__column-inner-right
-            div.unit.unit_theme-blue
-                h2.unit__title.unit__title_theme-head-aside popular posts
-                p.unit__mark.unit__mark_theme-blue-white 12 february, 2015
-                h3.unit__title.unit__title_theme-head-aside-small Project Design and Engineering Services
-                p.unit__mark.unit__mark_theme-blue-white 23 comments
-                hr.unit__horizontal.unit__horizontal_white-solid
-            div.unit.unit_theme-pdf-icon-yellow
-                span.unit__icon-caption.unit__icon-caption_uppercase-text-black download price
-            div.unit.unit_theme-blue
-                h2.unit__title.unit__title_theme-head-aside subscribe
-                hr.unit__horizontal.unit__horizontal_white-solid
+            div.unit.unit--theme-blue
+                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text popular posts
+                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
+                h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
+                p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
+                div.unit__horiz-inline-wrap
+                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
+                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+                    hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+
+            div.unit.unit--theme-yellow
+                div.unit__download-price-wrap
+                    div.icon.icon--theme-pdf
+                    span.unit__info.unit__info--small-text.unit__info--black-text Download price
+
+            div.unit.unit--theme-blue
+                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
+                hr.unit__horizontal.unit__horizontal--white-solid
                 div.unit__inner-form-aside
                     form.form
-                        input.form__input.form__input_theme-aside-input.form__input_theme-text.form__input_theme-blue-text(type="text", name="email", value="E-mail")
-                        input.form__submit.form__submit_theme-aside-submit.form__submit_theme-text.form__submit_theme-white-text(type="submit", value="sign up")
-            div.unit.unit_theme-star-icon-yellow
-                span.unit__icon-caption.unit__icon-caption_uppercase-text-black Work with us
+                        input.form__input.form__input--theme-unit-search-white(type="text", name="email", value="E-mail")
+                        input.form__submit.form__submit--theme-link-submit.form__submit--small-text.form__submit--white-text(type="submit", value="sign up")
+
+            div.unit.unit--vertical-double-bg-layer-unit
+                div.unit.unit--theme-yellow
+                    div.unit__download-price-wrap
+                        div.icon.icon--icon-stars
+                        span.unit__info.unit__info--small-text.unit__info--black-text Work with us
+
         //Колонка для главного содержимого сайта
-        main.main__column-main.main__column-main_theme-inline.main__column-inner-left
+        main.main__column-main.main__column-main--theme-inline.main__column-inner-left
             div.main__double-unit
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head General Contracting
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                div.unit__arrow.unit__arrow_down
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 1
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                    div.unit__arrow.unit__arrow--down
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 1
 
             div.main__double-unit
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 2
-                div.unit__arrow.unit__arrow_up
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head Project design and engineering
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 2
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width Project design and engineering
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                    div.unit__arrow.unit__arrow--up
 
             div.main__double-unit
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head Capital Improvements
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                div.unit__arrow.unit__arrow_down
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 3
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width Capital Improvements
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                    div.unit__arrow.unit__arrow--down
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 3
 
             div.main__double-unit
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head Construction
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                div.unit__arrow.unit__arrow_down
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 4
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width Construction
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                    div.unit__arrow.unit__arrow--down
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 4
 
             div.main__double-unit
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 5
-                div.unit__arrow.unit__arrow_up
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head Expert Witness
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 5
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width Expert Witness
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                    div.unit__arrow.unit__arrow--up
 
             div.main__double-unit
-                div.unit.unit_theme-info
-                    h3.unit__title.unit__title_theme-head Procurement
-                    hr.unit__horizontal.unit__horizontal_black-solid
-                    p.unit__article.unit__article_theme-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                div.unit__arrow.unit__arrow_down
-                div.unit.unit_theme-foto
-                    div.unit__number.unit__number_theme-yellow
-                        span.unit__number.unit__number_middle 6
+                div.unit.unit--bg-layer-unit
+                    div.unit.unit--theme-info
+                        h3.unit__title.unit__title--bold.unit__title--text-width Procurement
+                        hr.unit__horizontal.unit__horizontal--black-solid
+                        p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                    div.unit__arrow.unit__arrow--down
+                div.unit.unit--theme-foto
+                    div.unit__number.unit__number--theme-yellow-bg.unit__number--centered-text
+                        span.unit__number.unit__number--text 6
