--- a/app/views/body/our-services/our-services.pug
+++ b/app/views/body/our-services/our-services.pug
@@ -8,7 +8,7 @@ div.main.main--theme-white-gr
                 p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
                 h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
                 p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
-                div.unit__horiz-inline-wrap
+                div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
