--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -106,6 +106,12 @@
     &--letter-spacing018
       letter-spacing .18px
 
+    &--top-margin2
+      margin-top 2px
+
+    &--fix-margin-bottom-news
+      margin-bottom  1em
+
   //Элемент горизонтальной линии
   &__horizontal
     width 34px
