--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -5,7 +5,7 @@ div.main.main--theme-white-gr
         div.main__content-flex-wrap
 
             div.unit.unit--horizontal-double-unit.unit--theme-yellow
-                h2.unit__title.unit__title--big-bold.unit__title--theme-unit-black-title building the world around us
+                h2.unit__title.unit__title--big-bold.unit__title--top-margin2.unit__title--theme-unit-black-title building the world around us
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
                 input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
@@ -98,7 +98,7 @@ div.main.main--theme-white-gr
                 p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.
 
             div.unit.unit--horizontal-double-unit
-                h2.unit__title.unit__title--big-bold.unit__title--theme-unit-black-title Your building is in good hands
+                h2.unit__title.unit__title--big-bold.unit__title--top-margin2.unit__title--theme-unit-black-title Your building is in good hands
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--text-width419 Our mission is to provide the highest level of service for our client-partners from concept through construction.
                 input.button.button--theme-unit-btn.button--black-bg.button--text-white(type="button", value="About company")
@@ -127,11 +127,11 @@ div.main.main--theme-white-gr
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Construction
 
             div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text News
+                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--fix-margin-bottom-news.unit__title--white-text News
                 p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
                 h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
                 p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
-                div.unit__horiz-inline-wrap
+                div.unit__horiz-inline-wrap.unit__horiz-bottom-wrap
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                     hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
