Рефакторинг страницы home page, fix для кнопки с view project

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -448,6 +448,10 @@ body {
   bottom: 0;
   right: 0;
 }
+.unit__fix-button-view-project-wrap {
+  position: absolute;
+  bottom: 45px;
+}
 .unit__inner-form-aside {
   position: relative;
   bottom: -54px;
