--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -232,6 +232,10 @@
     bottom 0
     right 0
 
+  &__fix-button-view-project-wrap
+    position absolute
+    bottom 45px
+
   //Размещение формы в unit aside
   &__inner-form-aside
     position relative
