--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -161,7 +161,8 @@ div.main.main--theme-white-gr
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
-                input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
+                div.unit__fix-button-view-project-wrap
+                    input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
 
             div.unit.unit--big-bg-layer-unit.unit--transparent
                 div.unit__bottom-right-unit-wrap
