--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -93,7 +93,7 @@
       text-transform none
 
     &--theme-unit-black-title
-      width 294px
+      width 306px
       color #363636
 
     &--text-width
@@ -234,7 +234,11 @@
 
   &__fix-button-view-project-wrap
     position absolute
-    bottom 45px
+    bottom 48px
+
+  &__fix-btn-read-more-wrap
+    position absolute
+    bottom 58px
 
   //Размещение формы в unit aside
   &__inner-form-aside
