--- a/app/stylus/blocks/form/form.styl
+++ b/app/stylus/blocks/form/form.styl
@@ -57,6 +57,7 @@
     &--theme-link-submit
       float right
       margin-top 30px
+      margin-right -10px
       border none
       background-color #2297d8
 
