--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -8,7 +8,8 @@ div.main.main--theme-white-gr
                 h2.unit__title.unit__title--big-bold.unit__title--top-margin2.unit__title--theme-unit-black-title building the world around us
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
-                input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
+                div.unit__fix-btn-read-more-wrap
+                    input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
 
             div.unit
 
