Рефакторинг страницы home page. Меню perfect pixel. А также перенос меню в отдельный файл начат

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -88,61 +88,62 @@ body
 @import "blocks/logo/logo.styl"
 
 /*====================Блок меню==================*/
-.menu
-  &__items
-    list-style none
-    padding 0
-    margin 0
-    &::after
-      content ""
-      display table
-      clear both
-
-  &__item
-    float left
-    margin-right 40px
-
-    &_text
-      text-decoration none
-
-    &_facebook-theme
-      color #ffffff
-      font-size 20px
-      font-weight 400
-      line-height 36.12px
-
-    &_twitter-theme
-      color #ffffff
-      font-size 22px
-      font-weight 400
-      line-height 36.12px
-
-    &_icon-theme
-      padding-top 5px
-
-    &:last-child
-      margin-right 0
-
-  &__item-layer
-    position relative
-
-  &__icon-super
-    position absolute
-    top -10px
-    right -15px
-
-    &_theme-text
-      color #363636
-      font-family Montserrat, sans-serif;
-      font-size 11px
-      font-weight 600
-      vertical-align super
-
-    &_theme-sq-yellow
-      width 21px
-      height 15px
-      text-align center
-      background-color #ffe400
+@import "blocks/menu/menu.styl"
+//.menu
+//  &__items
+//    list-style none
+//    padding 0
+//    margin 0
+//    &::after
+//      content ""
+//      display table
+//      clear both
+//
+//  &__item
+//    float left
+//    margin-right 40px
+//
+//    &_text
+//      text-decoration none
+//
+//    &_facebook-theme
+//      color #ffffff
+//      font-size 20px
+//      font-weight 400
+//      line-height 36.12px
+//
+//    &_twitter-theme
+//      color #ffffff
+//      font-size 22px
+//      font-weight 400
+//      line-height 36.12px
+//
+//    &_icon-theme
+//      padding-top 5px
+//
+//    &:last-child
+//      margin-right 0
+//
+//  &__item-layer
+//    position relative
+//
+//  &__icon-super
+//    position absolute
+//    top -10px
+//    right -15px
+//
+//    &_theme-text
+//      color #363636
+//      font-family Montserrat, sans-serif;
+//      font-size 11px
+//      font-weight 600
+//      vertical-align super
+//
+//    &_theme-sq-yellow
+//      width 21px
+//      height 15px
+//      text-align center
+//      background-color #ffe400
 
 /*====================Блок с названием страницы=========*/
 .caption
