--- a/app/css/main.css
+++ b/app/css/main.css
@@ -150,7 +150,7 @@ body {
 .menu__icon-super {
   position: absolute;
   top: -10px;
-  right: -15px;
+  right: -16px;
 }
 .menu__icon-super_theme-text {
   color: #363636;
@@ -162,6 +162,7 @@ body {
 .menu__icon-super_theme-sq-yellow {
   width: 21px;
   height: 15px;
+  padding-top: 1px;
   text-align: center;
   background-color: #ffe400;
 }
