--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -71,46 +71,47 @@
     background-color transparent
 
   //Элемент заголовок
-  &__title
-    margin-top -4px
-    margin-bottom .8em
-    font-size 14px
-
-    &--bold
-      font-family Montserrat, sans-serif;
-      font-size 18px
-      font-weight 700
-      color #363636
-
-    &--big-bold
-      margin-bottom .45em
-      font-size 27px
-      font-weight 700
-      font-family Montserrat, sans-serif;
-      text-transform uppercase
-
-    &--uppercase-disabled
-      text-transform none
-
-    &--theme-unit-black-title
-      width 306px
-      color #363636
-
-    &--text-width
-      width 155px
-      color #363636
-
-    &--white-text
-      color #ffffff
-
-    &--letter-spacing018
-      letter-spacing .18px
-
-    &--top-margin2
-      margin-top 2px
-
-    &--fix-margin-bottom-news
-      margin-bottom  1em
+  @import "__title/__title.styl"
+  //&__title
+  //  margin-top -4px
+  //  margin-bottom .8em
+  //  font-size 14px
+  //
+  //  &--bold
+  //    font-family Montserrat, sans-serif;
+  //    font-size 18px
+  //    font-weight 700
+  //    color #363636
+  //
+  //  &--big-bold
+  //    margin-bottom .45em
+  //    font-size 27px
+  //    font-weight 700
+  //    font-family Montserrat, sans-serif;
+  //    text-transform uppercase
+  //
+  //  &--uppercase-disabled
+  //    text-transform none
+  //
+  //  &--theme-unit-black-title
+  //    width 306px
+  //    color #363636
+  //
+  //  &--text-width
+  //    width 155px
+  //    color #363636
+  //
+  //  &--white-text
+  //    color #ffffff
+  //
+  //  &--letter-spacing018
+  //    letter-spacing .18px
+  //
+  //  &--top-margin2
+  //    margin-top 2px
+  //
+  //  &--fix-margin-bottom-news
+  //    margin-bottom  1em
 
   //Элемент горизонтальной линии
   &__horizontal
