--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -5,7 +5,7 @@ div.main.main--theme-white-gr
         div.main__content-flex-wrap
 
             div.unit.unit--horizontal-double-unit.unit--theme-yellow
-                h2.unit__title.unit__title--big-bold.unit__title--top-margin2.unit__title--theme-unit-black-title building the world around us
+                h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text building the world around us
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
                 div.unit__fix-btn-read-more-wrap
