--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -247,28 +247,29 @@
     bottom -54px
 
   //Элемент article
-  &__article
-    font-size 14px
-    &--theme-unit-black-text
-      font-weight 600
-      line-height 22px
-      font-family Montserrat, sans-serif;
-      color #363636
-
-    &--gray-text
-      color #a0a0a0
-
-    &--grey-yellow-text
-      color #777463
-
-    &--text-width419
-      width 419px
-
-    &--centered-text
-      text-align center
-
-    &--text-ind
-      text-indent .5em
+  @import "__article/__article.styl"
+  //&__article
+  //  font-size 14px
+  //  &--theme-unit-black-text
+  //    font-weight 600
+  //    line-height 22px
+  //    font-family Montserrat, sans-serif;
+  //    color #363636
+  //
+  //  &--gray-text
+  //    color #a0a0a0
+  //
+  //  &--grey-yellow-text
+  //    color #777463
+  //
+  //  &--text-width419
+  //    width 419px
+  //
+  //  &--centered-text
+  //    text-align center
+  //
+  //  &--text-ind
+  //    text-indent .5em
 
   //Элемент подпись иконки
   &__icon-caption
