Рефакторинг страницы home page. Блок building the world... Отредактирован button.

--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -1,8 +1,10 @@
 .button
-  font-size 12px
+  font-size 11px
+  letter-spacing .5px
+
   &--theme-unit-btn
-    padding 15px 23px 15px 24px
-    font-weight 600
+    padding 16px 27px 16px 22px
+    font-weight bold
     font-family Montserrat, sans-serif;
     text-transform uppercase
 
