--- a/app/css/main.css
+++ b/app/css/main.css
@@ -742,11 +742,12 @@ body {
 }
 /*===============================Блок кнопка============================*/
 .button {
-  font-size: 12px;
+  font-size: 11px;
+  letter-spacing: 0.5px;
 }
 .button--theme-unit-btn {
-  padding: 15px 23px 15px 24px;
-  font-weight: 600;
+  padding: 16px 27px 16px 22px;
+  font-weight: bold;
   font-family: Montserrat, sans-serif;
   text-transform: uppercase;
   border: none;
