--- a/app/stylus/blocks/unit/__article/__article.styl
+++ b/app/stylus/blocks/unit/__article/__article.styl
@@ -1,7 +1,7 @@
 &__article
-  font-size 13px
-  line-height 1.7
-  letter-spacing .5px
+  font-size 14px
+  line-height 22px
+  font-weight 500
   font-family Montserrat, sans-serif;
 
   &--black-text
