--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -1,10 +1,9 @@
 .button
-  font-size 11px
-  letter-spacing .5px
+  font-size 12px
 
   &--theme-unit-btn
-    padding 16px 27px 16px 22px
-    font-weight bold
+    padding 15px 25px 16px 21px
+    font-weight 600
     font-family Montserrat, sans-serif;
     text-transform uppercase
 
