--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -2,9 +2,8 @@
   font-size 14px
 
   &--big-bold
-    font-size 25px
-    letter-spacing .5px
-    font-weight bold
+    font-size 27px
+    font-weight 700
     font-family Montserrat, sans-serif;
     text-transform uppercase
 
@@ -12,7 +11,7 @@
     width 315px
     margin-top 2px
     margin-bottom 10px
-    line-height 1.4
+    line-height 1.3
 
   &--black-text
     color #363636
