--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -1,6 +1,11 @@
 .button
   font-size 12px
 
+  &--theme-arrow
+    width 22px
+    height 28px
+    border none
+
   &--theme-unit-btn
     padding 15px 25px 16px 21px
     font-weight 600
@@ -27,12 +32,8 @@
   &--yellow-bg
     background-color #ffe400
 
-  &--theme-arrow
-    width 30px
-    height 30px
-    border none
-
   &--arrow-next
+    padding-left 5px
     background url("../img/arr-next.png") no-repeat center
 
   &--arrow-prev
