--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -96,3 +96,7 @@
     height 73px
     margin-bottom 12px
     background url("../img/icon-star.png") no-repeat center
+
+  &--arrow-next-inside
+    border 5px solid transparent
+    border-left 8px solid #ffffff
