--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -137,60 +137,61 @@
         margin-right 0
 
   //Элемент для информации
-  &__info
-
-    &--block
-      display block
-
-    &--med-text
-      font-size 20px
-      font-weight 600
-      font-family Montserrat, sans-serif;
-
-    &--big-text
-      font-size 36px
-      font-weight 600
-      letter-spacing 3.94px
-      font-family Montserrat, sans-serif;
-      text-transform uppercase
-
-    &--small-text
-      font-size 12px
-      font-weight 600
-      font-family Montserrat, sans-serif;
-      text-transform uppercase
-
-    &--norm-bold-text
-      font-size 14px
-      font-weight 900
-      font-family Montserrat, sans-serif
-
-    &--norm-text
-      font-size 14px
-      font-weight 700
-      font-family Montserrat, sans-serif
-
-    &--black-text
-      color #363636
-
-    &--white-text
-      color #ffffff
-
-    &--grey-text
-      color #a0a0a0
-
-    &--dark-grey-text
-      color #707070
-
-    &--white-blue-text
-      color #ffffff
-      opacity .5
-
-    &--letter-spacing035
-      letter-spacing .35px
-
-    &--letter-spacing047
-      letter-spacing .47px
+  @import "__info/__info.styl"
+  //&__info
+  //
+  //  &--block
+  //    display block
+  //
+  //  &--med-text
+  //    font-size 20px
+  //    font-weight 600
+  //    font-family Montserrat, sans-serif;
+  //
+  //  &--big-text
+  //    font-size 36px
+  //    font-weight 600
+  //    letter-spacing 3.94px
+  //    font-family Montserrat, sans-serif;
+  //    text-transform uppercase
+  //
+  //  &--small-text
+  //    font-size 12px
+  //    font-weight 600
+  //    font-family Montserrat, sans-serif;
+  //    text-transform uppercase
+  //
+  //  &--norm-bold-text
+  //    font-size 14px
+  //    font-weight 900
+  //    font-family Montserrat, sans-serif
+  //
+  //  &--norm-text
+  //    font-size 14px
+  //    font-weight 700
+  //    font-family Montserrat, sans-serif
+  //
+  //  &--black-text
+  //    color #363636
+  //
+  //  &--white-text
+  //    color #ffffff
+  //
+  //  &--grey-text
+  //    color #a0a0a0
+  //
+  //  &--dark-grey-text
+  //    color #707070
+  //
+  //  &--white-blue-text
+  //    color #ffffff
+  //    opacity .5
+  //
+  //  &--letter-spacing035
+  //    letter-spacing .35px
+  //
+  //  &--letter-spacing047
+  //    letter-spacing .47px
 
   //Элемент info-wrap
   &__info-wrap
@@ -291,6 +292,10 @@
   //Элемент кнопка в левой части под очередным блоком
   &__button-left
     margin-top 10px;
+
+  //Элемент кнопка со стрелкой
+  &__button-arrow-wrap
+    padding 18px 106px
 
   //Элемент стрелки
   &__arrow
