--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -37,6 +37,8 @@
     background url("../img/arr-next.png") no-repeat center
 
   &--arrow-prev
+    padding-left 0
+    padding-right 6px
     background url("../img/arr-prev.png") no-repeat center
 
   &--arrow-prev-hover
