--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -100,3 +100,7 @@
   &--arrow-next-inside
     border 5px solid transparent
     border-left 8px solid #ffffff
+
+  &--arrow-prev-inside
+    border 5px solid transparent
+    border-right 8px solid #ffffff
