--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -196,7 +196,8 @@
   //Элемент info-wrap
   &__info-wrap
     display block
-    margin 45px 0 35px
+    height 44px
+    margin 24px 0 18px
     text-align center
 
   &__company-video-wrap
