--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -17,13 +17,14 @@ div.main.main--theme-white-gr
                 div.unit__button-arrow-wrap
                     button.button.button--theme-arrow.button--arrow-next
                         div.icon.icon--arrow-next-inside
-                //input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
 
                 div.unit__info-wrap
                     span.unit__info.unit__info--big-medium.unit__info--black-text 01
                         sup.unit__info.unit__info--medium.unit__info--black-text /03
 
-                input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
+                div.unit__button-arrow-wrap
+                    button.button.button--theme-arrow.button--arrow-prev
+                        div.icon.icon--arrow-prev-inside
 
             div.unit
 
