--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -11,10 +11,22 @@
     margin-bottom 14px
     background url("../img/play-circle.png") no-repeat center
 
+  &--theme-circle-bg
+    position relative
+    width 61px
+    height 61px
+    margin auto
+    -moz-border-radius 30px
+    -webkit-border-radius 30px
+    border-radius 30px
+    background-color #2297d8
+
   &--theme-play-arrow
+    position absolute
+    top 17px
+    left 22px
     width 22px
     height 28px
-    margin-left 28px
     background url("../img/play-arrow.png") no-repeat center
 
   &--theme-pdf
