--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -33,9 +33,10 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-company-video.unit--theme-blue
                 div.unit__company-video-wrap
                     button.icon.icon--theme-circle.icon--blue-bg
-                        div.icon.icon--theme-play-arrow
+                        div.icon.icon--theme-circle-bg
+                            div.icon.icon--theme-play-arrow
 
-                    span.unit__info.unit__info--small-text.unit__info--white-text Company video
+                    span.unit__info.unit__info--small-medium.unit__info--white-text.unit__info--uppercase Company video
 
             div.unit
 
