--- a/app/stylus/blocks/unit/__info/__info.styl
+++ b/app/stylus/blocks/unit/__info/__info.styl
@@ -1,5 +1,10 @@
 &__info
 
+  &--small-medium
+    font-size 12px
+    font-weight 600
+    font-family Montserrat, sans-serif;
+
   &--medium
     font-size 21px
     font-weight 500
@@ -14,3 +19,9 @@
 
   &--black-text
     color #363636
+
+  &--white-text
+    color #ffffff
+
+  &--uppercase
+    text-transform uppercase
