--- a/app/css/main.css
+++ b/app/css/main.css
@@ -307,6 +307,11 @@ body {
   margin-bottom: 10px;
   line-height: 1.3;
 }
+.unit__title--med-width {
+  width: 200px;
+  margin-top: -8px;
+  margin-bottom: 15px;
+}
 .unit__title--black-text {
   color: #363636;
 }
@@ -420,6 +425,9 @@ body {
 }
 .unit__article--black-text {
   color: #363636;
+}
+.unit__article--gray-text {
+  color: #a0a0a0;
 }
 .unit__icon-caption {
   display: block;
