--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -13,5 +13,10 @@
     margin-bottom 10px
     line-height 1.3
 
+  &--med-width
+    width 200px
+    margin-top -8px
+    margin-bottom 15px
+
   &--black-text
     color #363636
