--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -41,9 +41,9 @@ div.main.main--theme-white-gr
             div.unit
 
             div.unit.unit--theme-info
-                h2.unit__title.unit__title--big-bold.unit__title--text-width Our services
+                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text Our services
                 hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
+                p.unit__article.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
 
 
             div.unit.unit--theme-foto
