--- a/app/stylus/blocks/unit/__title/__title.styl
+++ b/app/stylus/blocks/unit/__title/__title.styl
@@ -1,6 +1,12 @@
 &__title
   font-size 14px
 
+  &--med-bold
+    width 155px
+    font-size 18px
+    font-weight 700
+    font-family Montserrat, sans-serif;
+
   &--big-bold
     font-size 27px
     font-weight 700
@@ -16,6 +22,11 @@
   &--med-width
     width 200px
     margin-top -8px
+    margin-bottom 15px
+
+  &--med-width-h3
+    width 180px
+    margin-top -3px
     margin-bottom 15px
 
   &--black-text
