--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -299,20 +299,7 @@
     padding 18px 106px
 
   //Элемент стрелки
-  &__arrow
-    position absolute
-    border 12px solid transparent
-
-    &--down
-      left 130px
-      bottom -24px
-      z-index 10
-      border-top 12px solid #ffffff
-
-    &--up
-      left 130px
-      top -24px
-      border-bottom 12px solid #ffffff
+  @import "__arrow/__arrow.styl"
 
   //Элемент номер
   &__number
