--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -47,10 +47,13 @@ div.main.main--theme-white-gr
 
 
             div.unit.unit--theme-foto
-            div.unit.unit--theme-info
-                h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+
+            div.unit.unit--bg-layer-unit
+                div.unit.unit--theme-info
+                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text General Contracting
+                    hr.unit__horizontal.unit__horizontal--black-solid
+                    p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+                div.unit__arrow.unit__arrow--left
 
             div.unit.unit--theme-foto
 
