--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -42,4 +42,6 @@
     background url("../img/arr-prev.png") no-repeat center
 
   &--arrow-prev-hover
+    padding-left 0
+    padding-right 5px
     background url("../img/arr-prev-hover.png") no-repeat center
