--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -58,36 +58,45 @@ div.main.main--theme-white-gr
             div.unit.unit--theme-foto
 
             div.unit.unit--theme-info
-                input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+                div.unit__fix-padding-unit-with-arrow-hower
+                div.unit__button-arrow-wrap
+                    button.button.button--theme-arrow.button--arrow-next
+                        div.icon.icon--arrow-next-inside
 
                 div.unit__info-wrap
-                    span.unit__info.unit__info--big-text.unit__info--black-text 03
-                        sup.unit__info.unit__info--med-text.unit__info--black-text /06
+                    span.unit__info.unit__info--big-medium.unit__info--black-text 03
+                        sup.unit__info.unit__info--medium.unit__info--black-text /06
 
-                input.button.button--theme-arrow.button--arrow-prev-hover.button--white-bg.unit__button-center(type="button", value="")
+                div.unit__button-arrow-wrap
+                    button.button.button--theme-arrow.button--arrow-prev-hover
+                        div.icon.icon--arrow-prev-inside
 
-
-            div.unit.unit--white
-                h2.unit__title.unit__title--bold.unit__title--text-width Project design and engineering
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+            div.unit.unit--bg-layer-unit
+                div.unit.unit--white
+                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Project design and engineering
+                    hr.unit__horizontal.unit__horizontal--black-solid
+                    p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+                div.unit__arrow.unit__arrow--right
 
             div.unit.unit--theme-foto
-            div.unit.unit--white
-                h2.unit__title.unit__title--bold.unit__title--text-width Capital improvements
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.
+
+            div.unit.unit--bg-layer-unit
+                div.unit.unit--white
+                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Capital improvements
+                    hr.unit__horizontal.unit__horizontal--black-solid
+                    p.unit__article.unit__article--gray-text This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.
+                div.unit__arrow.unit__arrow--up
 
             div.unit.unit--theme-yellow
                 div.unit__download-price-wrap
                     div.icon.icon--theme-pdf
-                    span.unit__info.unit__info--small-text.unit__info--black-text Download price
+                    span.unit__info.unit__info--small-medium.unit__info--black-text.unit__info--uppercase Download price
 
             div.unit.unit--theme-blue
                 div.unit__contact-us-wrap
                     div.icon.icon--theme-contact-circle
                     div.icon.icon--theme-play-arrow-down
-                    span.unit__info.unit__info--small-text.unit__info--white-text Contact us
+                    span.unit__info.unit__info--small-medium.unit__info--white-text.unit__info--uppercase Contact us
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--bg-unit-width959.unit--dark-grey
