--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -298,6 +298,9 @@
   &__button-arrow-wrap
     padding 18px 106px
 
+  &__fix-padding-unit-with-arrow-hower
+    height 4px
+
   //Элемент стрелки
   @import "__arrow/__arrow.styl"
 
